# zk-20

./: README.md
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 001_initial_schema.sql  002_feature_modules.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/handlers/: mod.rs
backend/src/handlers/alert_dispatches/: mod.rs
backend/src/handlers/alert_escalations/: mod.rs
backend/src/handlers/alert_playback/: mod.rs
backend/src/handlers/alerts/: mod.rs
backend/src/handlers/building_inspections/: mod.rs
backend/src/handlers/buildings/: mod.rs
backend/src/handlers/devices/: mod.rs
backend/src/handlers/hotspots/: mod.rs
backend/src/handlers/patrol_locations/: mod.rs
backend/src/handlers/patrol_personnel/: mod.rs
backend/src/handlers/patrol_tasks/: mod.rs
backend/src/handlers/responsible_persons/: mod.rs
backend/src/handlers/statistics/: mod.rs
backend/src/handlers/thermal_data/: mod.rs
backend/src/models/: mod.rs
backend/src/mqtt/: mod.rs
backend/src/routes/: mod.rs
backend/src/services/: alert_dispatch.rs  mod.rs  patrol_scheduler.rs  thermal_analysis.rs
backend/src/websocket/: mod.rs
deploy/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
deploy/data/: zk-20.db
deploy/mosquitto/config/: mosquitto.conf
deploy/systemd/: zk-20-backend.service  zk-20-frontend.service
frontend/: .env  .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
scripts/: install.bat  mqtt_simulator.py  run.bat  seed_data.py
(+30 files in other folders)
