[package]
name = "zk-20-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-ws = "0.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono", "uuid", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rumqttc = "0.24"
futures-util = "0.3"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "1"
anyhow = "1"
bcrypt = "0.15"
jsonwebtoken = "9"
validator = { version = "0.19", features = ["derive"] }
